--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		]
 	},
 	"dependencies": {
+		"animate.css": "^4.1.1",
 		"bootstrap": "^4.1.3",
 		"jquery": "^3.3.1",
 		"popper.js": "^1.12.9",
